# spring2024-assignment1-basics

./: .gitattributes  .gitignore  pixi.toml  pyproject.toml  requirements.txt  writeup.typ
cs336_basics/: bpe.py  evaluate.py  pretokenizer.py  training.py  training_loop.py  transformer.py
rustsrc/: Cargo.toml  README.md  build.rs  pyproject.toml
rustsrc/rustsrc/: __init__.py  rustsrc.pyi
rustsrc/src/: bpe-old.rs  bpe.rs  bpe_train.rs  lib.rs  pretokenize.rs  utils.rs
tests/: adapters.py  playground.ipynb  test_tokenizer.py  test_train_bpe.py
tokenizers/: TinyStoriesV2-GPT4-train_merges.pkl  TinyStoriesV2-GPT4-train_vocab.pkl  owt_train_merges.pkl  owt_train_vocab.pkl
