[package]
name = "rustsrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustsrc"
crate-type = ["cdylib", "lib"]


# [patch.crates-io]
#  onig_sys = { git = "https://github.com/rust-onig/rust-onig", revision = "e093656b8dff5cff5312429412d0f3f17c83aa3e" }

[build-dependencies]
pyo3-build-config = { version = "0.25.1", features = [] }

[dependencies]
dashmap = {version = "6.1.0", features = ["rayon"]}
# fancy-regex = "0.13.0"
indicatif = "0.18.0"
itertools = "0.14.0"
numpy = "0.25.0"
onig = "6.5.1"
# pcre2 = "0.2.7"
priority-queue = "2.0.2"
pyo3 = {version = "0.25.1", features = ["extension-module"]}
rayon = "1.10.0"
pcre2 = "0.2.9"
regex = "1.10.4"
hyperscan = "0.3.2"
unicode-properties = "0.1.3"
rand = "0.9.2"

[profile.release]
lto = "fat"
